# SeregaMessenger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: AndroidManifest.xml
include/api/: Api.hpp  AuthApi.hpp  ChatsApi.hpp  UpdatesApi.hpp  UsersApi.hpp
include/core/: CryptoManager.hpp  SeregaApp.hpp
include/crypto/: CryptoManager.hpp
include/storage/: CryptoStorage.hpp  SecureStorage.hpp
include/utils/: Config.hpp  RequestHandler.hpp
qml/: Avatar.qml  Chat.qml  ChatDelegate.qml  Chats.qml  Login.qml  Main.qml  Message.qml
src/: main.cpp
src/api/: Api.cpp  AuthApi.cpp  ChatsApi.cpp  UpdatesApi.cpp  UsersApi.cpp
src/core/: CryptoManager.cpp  SeregaApp.cpp
src/crypto/: CryptoManager.cpp
src/storage/: CryptoStorage.cpp  SecureStorage.cpp
src/utils/: RequestHandler.cpp
tests/: CMakeLists.txt  TestApi.cpp  TestAuthApi.cpp  TestChatsApi.cpp  TestCrypto.cpp  TestUpdatesApi.cpp  TestUsersApi.cpp  main.cpp
